<resources>
    <string name="app_name">Ticketing platform</string>
    <string name="title_activity_ticket_login">Ticket Service - Login</string>

    <string name="action_settings">Settings</string>
    <string name="app_name_display">Ticketing platform</string>
    <string name="login_header_text">Login form</string>
    <string name="email_label_trad">Email:</string>
    <string name="password_label_trad">Password:</string>
    <string name="login_button_label">Login</string>
    <string name="remember_me_label">Remember me</string>
    <string name="toast_login_success_text">Login successful</string>
    <string name="toast_logged_out_text">Logged out</string>
    <string name="toast_not_logged_in_text">You are not logged in</string>
    <string name="toast_logout_error_text">Error while logging out</string>
    <string name="title_activity_tickets">Home</string>
    <string name="toast_login_fail_text">Login failed</string>
    <string name="action_logout">Logout</string>
    <string name="toast_more_options">Tap the menu button for more options</string>

    <string name="ticket_home_header_text">Welcome, </string>
    <string name="ticket_home_create_ticket_button_label">Create a ticket</string>
    <string name="action_create_building">Create a building</string>
    <string name="action_create_ticket">Create a ticket</string>
    <string name="ticket_home_show_menu">Menu</string>
    <string name="toast_banned_user">User is banned</string>
    <string name="simple_ticket_code_caption">Ticket code</string>
    <string name="simple_ticket_status_caption">Ticket status</string>
    <string name="title_activity_ticket_detail">Ticket detail</string>

    <string name="simple_ticket_search_hint">Search ticket code or status</string>
    <string name="ticketDetail_ticketCodeLabel">Code</string>
    <string name="ticketDetail_title">Ticket detail for ticket :</string>
    <string name="ticketDetail_ticketStatusLabel">Status</string>
    <string name="ticketDetail_ticketCategoryLabel">Category</string>
    <string name="ticketDetail_ticketSubcategoryLabel">Subcategory</string>
    <string name="ticketDetail_tabNameDetail">Details</string>
    <string name="ticketDetail_tabNameComments">Comments</string>
    <string name="ticketDetail_tabNameHistory">History</string>
    <string name="ticketDetail_ticketStatus">Ticket status</string>
    <string name="ticketDetail_paramUnpackError">Error while treating your request, please try again.</string>
    <string name="ticketDetail_ticketReporterLabel">Ticket reporter</string>
    <string name="ticketDetail_ticketBuildingLabel">Building</string>
    <string name="ticketDetail_ticketManagerLabel">Manager</string>
    <string name="ticketDetail_ticketFloorLabel">Floor</string>
    <string name="ticketDetail_ticketOfficeLabel">Office</string>
    <string name="ticketDetail_ticketCompanyLabel">Company</string>
    <string name="ticketDetail_ticketDescriptionLabel">Description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ticketDetail_noManagerFlavour">No manager</string>
    <string name="ticketDetail_noCompanyFlavour">No company assigned</string>
    <string name="ticketDetail_noBuildingFlavour">None</string>
    <string name="ticketComment_title">Comments on this ticket</string>
    <string name="ticketComment_createCommentButtonFlavour">Post a comment</string>
    <string name="TicketDetail_informationsFail">Couldn\'t load ticket informations.</string>
    <string name="TicketDetail_commentsFail">Couldn\'t load ticket comments</string>
    <string name="TicketDetail_historyFail">Couldn\'t load ticket history</string>
    <string name="ticketHistory_title">Ticket history</string>
    <string name="ticketHistoryRow_dateUpdatedLabel">Update date :</string>
    <string name="ticketHistoryRow_newStatusLabel">New ticket status :</string>
    <string name="title_activity_create_ticket">Create ticket</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="ticketCreate_title">Create a ticket</string>
    <string name="createTicket_category">Category</string>
    <string name="ticketCreate_category">Category</string>
    <string name="ticketCreate_subcategory">Subcategory</string>
    <string name="ticketCreate_building">Building</string>
    <string name="ticketCreate_floor">Floor</string>
    <string name="ticketCreate_office">Office</string>
    <string name="ticketCreate_description">Description</string>
    <string name="ticketCreate_sendButton"> Create ticket</string>
    <string name="ticketCreate_descriptionGreyText">Problem description</string>
    <string name="ticketCommentCreate_title">Create a comment</string>
    <string name="title_activity_create_comment">Create comment</string>
    <string name="createComment_title">Create comment</string>
    <string name="createComment_sendCommentButton">Send this comment</string>
    <string name="commentPostSuccessText">Comment posted successfully</string>
    <string name="commentPostFailureText">Posting comment failed, please try again.</string>
    <string name="title_activity_create_building">Create building</string>
    <string name="createBuilding_title">Create building for you</string>
    <string name="createBuilding_countryLabel">Country</string>
    <string name="createBuilding_address">Address</string>
    <string name="createBuilding_postcode">Post code</string>
    <string name="createBuilding_vicinity">Vicinity</string>
    <string name="createBuilding_buildingName">Building name</string>
    <string name="createBuilding_sendButtonCaption">Create building</string>
    <string name="buildingCreationSuccess">Building created successfully</string>
    <string name="buildingCreationFailure">Building creation failed, please try again</string>
    <string name="createBuildingWrongCountryInput">You entered a wrong country name</string>
    <string name="ticketCreate_cancelled">Ticket creation cancelled</string>
    <string name="createTicket_subcategory">Subcategory</string>
    <string name="emptyCategoryName">None</string>
    <string name="pleaseSelectACategory">Please select a category</string>
    <string name="createTicket_nextStepButton">Next step</string>
    <string name="createTicketBuilding_building">Building</string>
    <string name="createTicket_floor">Floor</string>
    <string name="ticketCreateBuilding_nextStepButton">Next step</string>
    <string name="ticketCreateBuilding_office">Office</string>
    <string name="ticketCreate_image">Ticket picture</string>
    <string name="ticketCreate_confirmationPage">Confirmation</string>
    <string name="ticketCreateDescription_descriptionLabel">Problem description</string>
    <string name="ticketCreate_descriptionNextStep">Next step</string>
    <string name="ticketCreate_pleaseSelectCategory">Please select a category</string>
    <string name="ticketCreate_confirmationLabel">Confirm the new ticket\'s informations:</string>
    <string name="createTicketConfirmation_category">Category</string>
    <string name="ticketCreateConfirmation_subcategory">Subcategory</string>
    <string name="ticketCreateConfirmation_undefined">Not defined</string>
    <string name="ticketCreateConfirmation_buildingName">Building name</string>
    <string name="ticketCreateConfirmation_floor">Floor</string>
    <string name="ticketCreateConfirmation_office">Office</string>
    <string name="ticketCreateConfirmation_description">Description</string>
    <string name="ticketCreateConfirmation_buttonLabel">Confirm ticket creation</string>
    <string name="ticketCreateConfirmation_notice">You can still modify your ticket\'s informations!</string>
    <string name="ticketCreateResponse_success">The ticket has been created, thanks for your report.</string>
    <string name="simpleTicket_failedTicketsLoad">Could not load tickets list, please try again</string>
    <string name="action_show_own_tickets">Show your own tickets</string>
    <string name="action_show_managed_tickets">Show tickets managed by you</string>
    <string name="action_show_unmanaged_tickets">Show unmanaged tickets</string>
    <string name="ticketDetail_takeManagement">Take management of this ticket</string>
    <string name="ticketDetail_releaseManagement">Release management of this ticket</string>
    <string name="ticketDetail_assignCompany">Assign company to this ticket</string>
    <string name="ticketDetail_changePhase">Change ticket\'s status to the next phase</string>
    <string name="ticketUpdateDetail_success">Ticket details update successful</string>
    <string name="ticketUpdateDetail_fail">Failed to update ticket details, please try again</string>
    <string name="ticketUpdateProgressionDetail_success">Ticket status successfully updated.</string>
    <string name="ticketUpdateProgressionDetail_fail">Ticket status update failed, please try again</string>
    <string name="ticketDetail_cancelUpdateCompany">Cancelled company assignment</string>
    <string name="ticketCreate_lieu">Location</string>
    <string name="ticketDetail_updateTicketCompanySuccess">New company assigned succesfully</string>
    <string name="ticketDetail_updateTicketCompanyFailure">There was a problem while assigning a company to the ticket</string>
</resources>
