<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.ec.androidticket.activities.home.TicketHomeActivity">
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"
    />
    <item
        android:id="@+id/action_createTicket"
        android:orderInCategory="1"
        android:title="@string/action_create_ticket"
        app:showAsAction="never"
    />
    <item
        android:id="@+id/action_createBuilding"
        android:orderInCategory="2"
        android:title="@string/action_create_building"
        app:showAsAction="never"
    />
    <item
        android:id="@+id/action_show_own_tickets"
        android:orderInCategory="3"
        android:title="@string/action_show_own_tickets"
        android:visible="false"
        app:showAsAction="never"
    />
    <item
        android:id="@+id/action_show_managed_tickets"
        android:orderInCategory="4"
        android:title="@string/action_show_managed_tickets"
        android:visible="false"
        app:showAsAction="never"
    />
    <item
        android:id="@+id/action_show_unmanaged_tickets"
        android:orderInCategory="5"
        android:title="@string/action_show_unmanaged_tickets"
        android:visible="false"
        app:showAsAction="never"
    />
</menu>
