<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="org.ec.androidticket.activities.createTicket.fragments.CreateTicketBuildingFragment"
             android:shrinkColumns="1"
             android:stretchColumns="1">

    <TableRow>
        <TextView
            android:layout_column="0"
            android:text="@string/createTicketBuilding_building"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
        />

        <Spinner
            android:layout_column="1"
            android:id="@+id/createTicket_buildingSpinner"
        />
    </TableRow>

    <TableRow
        android:visibility="gone"
        android:id="@+id/ticketCreateBuilding_floorRow">

        <TextView
            android:layout_column="0"
            android:text="@string/createTicket_floor"
        />

        <EditText
            android:id="@+id/ticketCreate_floor"
            android:inputType="text"
        />
    </TableRow>

    <TableRow
        android:visibility="gone"
        android:id="@+id/ticketCreateBuilding_officeRow">
        <TextView
            android:layout_column="0"
            android:text="@string/ticketCreateBuilding_office"
        />

        <EditText
            android:id="@+id/ticketCreate_office"
            android:inputType="text"
        />
    </TableRow>

    <TableRow>
        <Button
            android:layout_width="match_parent"
            android:id="@+id/ticketCreateBuilding_nextStep"
            android:layout_column="0"
            android:layout_span="2"
            android:text="@string/ticketCreateBuilding_nextStepButton"
        />
    </TableRow>

</TableLayout>
