<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="org.ec.androidticket.activities.createBuilding.CreateBuildingActivity"
                android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createBuilding_title"
        android:textSize="20sp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#FF000000"
        android:paddingBottom="20dp"/>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/buildingCreationGrid"
        android:columnCount="3"
        android:rowCount="8"
        android:nestedScrollingEnabled="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/createBuilding_countryLabel"
            android:id="@+id/textView13"
            android:layout_row="0"
            android:layout_column="0"
            android:enabled="false"
            android:editable="false"/><![CDATA[

        Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createBuilding_countrySpinner"
            android:layout_row="0"
            android:layout_column="1"
            android:spinnerMode="dialog"/>

        ]]>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createBuilding_countryEdit"
            android:layout_row="0"
            android:layout_column="1"
            android:enabled="false"
            android:editable="false"
            android:text="Belgique"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/createBuilding_address"
            android:id="@+id/textView14"
            android:layout_row="1"
            android:layout_column="0"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createBuildingAddressEdit"
            android:layout_row="1"
            android:layout_column="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/createBuilding_postcode"
            android:id="@+id/textView15"
            android:layout_row="2"
            android:layout_column="0"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/createBuildingPostcodeEdit"
            android:layout_row="2"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/createBuilding_vicinity"
            android:id="@+id/textView16"
            android:layout_row="3"
            android:layout_column="0"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createBuildingVicinityEdit"
            android:layout_row="3"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/createBuilding_buildingName"
            android:id="@+id/textView17"
            android:layout_row="4"
            android:layout_column="0"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createBuildingNameEdit"
            android:layout_row="4"
            android:layout_column="1"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createBuilding_sendButtonCaption"
            android:id="@+id/createBuildingButton"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="2"/>

    </GridLayout>

</LinearLayout>
