<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="org.ec.androidticket.activities.createTicket.CreateTicketActivity"
                android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ticketCreate_title"
        android:id="@+id/textView6"
        android:paddingBottom="20dp"
        android:gravity="center_vertical|center_horizontal"/>

    <TableLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/ticketCreate_category"
                android:id="@+id/textView7"
                android:layout_gravity="center_vertical"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ticketCreate_categorySpinner"
                android:longClickable="false"
                android:spinnerMode="dialog"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/ticketCreate_subcategory"
                android:id="@+id/textView8"
                android:layout_gravity="center_vertical"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ticketCreate_subcategorySpinner"
                android:longClickable="false"
                android:spinnerMode="dialog"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/ticketCreate_building"
                android:id="@+id/textView9"
                android:layout_gravity="center_vertical"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ticketCreate_buildingSpinner"
                android:longClickable="false"
                android:spinnerMode="dialog"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/ticketCreate_floor"
                android:id="@+id/textView10"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ticketCreate_floorEdit"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/ticketCreate_office"
                android:id="@+id/textView11"
                android:layout_gravity="center_vertical"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ticketCreate_officeEdit"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/ticketCreate_description"
                android:layout_column="0"
                android:layout_span="2"
                android:text="@string/ticketCreate_descriptionGreyText"
                android:maxLength="200"
                android:maxLines="4"
                android:minLines="4"
                android:nestedScrollingEnabled="true"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ticketCreate_sendButton"
                android:id="@+id/button2"
                android:layout_span="2"/>
        </TableRow>

    </TableLayout>

</LinearLayout>
