<GridLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Title -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="#FF000000"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:id="@+id/title"
        android:text="@string/ticketDetail_title"
        android:layout_gravity="top|left"/>

    <!-- Ticket code -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticketDetail_ticketCodeLabel"
        android:id="@+id/ticketCodeLabel"
        android:textColor="#FF909090"
        android:layout_row="2"
        android:layout_column="0"
        android:gravity="start"
        android:paddingEnd="20dp"
        android:layout_gravity="top|left"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="#TicketCodePlaceholder"
        android:textColor="#FF000000"
        android:id="@+id/ticketCode"
        android:layout_row="2"
        android:layout_column="1"
        android:gravity="end"
        android:layout_gravity="top|left"/>

    <!-- Ticket status -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticketDetail_ticketStatusLabel"
        android:id="@+id/ticketStatusLabel"
        android:textColor="#FF909090"
        android:layout_row="3"
        android:layout_column="0"
        android:gravity="start"
        android:paddingEnd="20dp"
        android:layout_gravity="top|left"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="#TicketStatusPlaceholder"
        android:textColor="#FF000000"
        android:id="@+id/ticketCode"
        android:layout_row="3"
        android:layout_column="1"
        android:gravity="end"
        android:layout_gravity="top|left"/>

    <!-- Ticket category -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticketDetail_ticketCategoryLabel"
        android:id="@+id/ticketCategoryLabel"
        android:textColor="#FF909090"
        android:layout_row="4"
        android:layout_column="0"
        android:gravity="start"
        android:paddingEnd="20dp"
        android:layout_gravity="top|left"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="#TicketCategoryPlaceholder"
        android:textColor="#FF000000"
        android:id="@+id/ticketCategory"
        android:layout_row="4"
        android:layout_column="1"
        android:gravity="end"
        android:layout_gravity="top|left"/>

    <!-- Ticket subcategory -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticketDetail_ticketSubcategoryLabel"
        android:id="@+id/ticketSubcategoryLabel"
        android:textColor="#FF909090"
        android:layout_row="5"
        android:layout_column="0"
        android:gravity="start"
        android:paddingEnd="20dp"
        android:layout_gravity="top|left"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="#TicketSubcategoryPlaceholder"
        android:textColor="#FF000000"
        android:id="@+id/ticketSubcategory"
        android:layout_row="5"
        android:layout_column="1"
        android:gravity="end"
        android:layout_gravity="top|left"/>

</GridLayout>
