<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             tools:context="org.ec.androidticket.activities.createTicket.fragments.CreateTicketCategoryFragment"
             android:shrinkColumns="1">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/createTicket_category"
            android:id="@+id/textView7"
            android:layout_column="0"
            android:layout_gravity="center_vertical"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ticketCreate_categorySpinner"
            android:layout_column="1"

            android:spinnerMode="dialog"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginStart="10dp"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/createTicket_subcategory"
            android:id="@+id/createTicket_subcategoryLabel"
            android:layout_column="0"
            android:visibility="invisible"
            android:layout_gravity="center_vertical"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ticketCreate_subcategorySpinner"
            android:layout_column="1"
            android:visibility="gone"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginStart="10dp"
            android:spinnerMode="dialog"/>
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createTicket_nextStepButton"
            android:id="@+id/createTicketCategory_nextStep"
            android:layout_span="2"/>
    </TableRow>
</TableLayout>
